@@ -21,4 +21,5 @@ with contributions by:
     John Deeny <taqueso@dilapidated.org>
     Robert Lunnon <bobl@optushome.com.au>
     Enrico Ardizzoni <craken@users.sourceforge.net>
+    Deti Fliegl <deti@fliegl.de>
 
