@@ -1,4 +1,4 @@
-.TH darkice 1 "February 15, 2004" "DarkIce" "DarkIce live audio streamer"
+.TH darkice 1 "March 13, 2004" "DarkIce" "DarkIce live audio streamer"
 .SH NAME
 darkice \- an icecast / shoutcast live audio streamer
 .SH SYNOPSIS
@@ -89,6 +89,7 @@ Developed with contributions by
     John Deeny <taqueso@dilapidated.org>
     Robert Lunnon <bobl@optushome.com.au>
     Enrico Ardizzoni <craken@users.sourceforge.net>
+    Deti Fliegl <deti@fliegl.de>
 
 .SH LINKS
 Project homepage:
